--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'androidx.compose.material:material:1.1.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -79,4 +80,6 @@ dependencies {
 
     //Google auth dependency
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
 }
