--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,10 @@ dependencies {
 
     //Google auth dependency
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
-
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
+
+    //SplashScreen
+    implementation("androidx.core:core-splashscreen:1.0.1")
+    implementation 'com.airbnb.android:lottie:6.0.0'
+
 }
