--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,6 @@ dependencies {
 
     //SplashScreen
     implementation("androidx.core:core-splashscreen:1.0.1")
-    implementation 'com.airbnb.android:lottie:6.0.0'
+    implementation "com.airbnb.android:lottie-compose:4.1.0"
 
 }
