--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,8 @@ dependencies {
     implementation("androidx.core:core-splashscreen:1.0.1")
     implementation "com.airbnb.android:lottie-compose:4.1.0"
 
+    //coil
+    implementation("io.coil-kt:coil-compose:2.3.0")
+
+
 }
