--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,13 @@ android {
     namespace 'com.kubyapp.agrokuby'
     compileSdk 33
 
+
+
+
     defaultConfig {
+        // Use `minSdk 21` for `compose`, `compose-m2`, and `compose-m3`.
+        minSdk 16
+
         applicationId "com.kubyapp.agrokuby"
         minSdk 28
         targetSdk 33
@@ -82,6 +88,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
 
+
     //SplashScreen
     implementation("androidx.core:core-splashscreen:1.0.1")
     implementation "com.airbnb.android:lottie-compose:4.1.0"
@@ -89,5 +96,20 @@ dependencies {
     //coil
     implementation("io.coil-kt:coil-compose:2.3.0")
 
+
+    // Includes the core logic for charts and other elements.
+    implementation "com.patrykandpatrick.vico:core:1.6.5"
+
+    // For Jetpack Compose.
+    implementation "com.patrykandpatrick.vico:compose:1.6.5"
+
+    // For the view system.
+    implementation "com.patrykandpatrick.vico:views:1.6.5"
+
+    // For `compose`. Creates a `ChartStyle` based on an M2 Material Theme.
+    implementation "com.patrykandpatrick.vico:compose-m2:1.6.5"
+
+    // For `compose`. Creates a `ChartStyle` based on an M3 Material Theme.
+    implementation "com.patrykandpatrick.vico:compose-m3:1.6.5"
 
 }
