--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,12 @@ buildscript {
     ext {
         compose_ui_version = '1.4.2'
     }
+
+    repositories {
+        mavenCentral()
+    }
+
+
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
     }
