--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:name=".ApplicationFirebaseAuth"
@@ -14,10 +16,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Agrokuby"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC17fQ0Mv5-sOyuJi_X-IgaPSP817uDkzc"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+
             android:theme="@style/Theme.Agrokuby">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
