--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 
     repositories {
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 
 
@@ -18,3 +19,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
+
+
